--- a/ui/package.json
+++ b/ui/package.json
@@ -15,80 +15,78 @@
     "clean": "rm -rf node_modules && rm -rf src/plugins/**/node_modules"
   },
   "dependencies": {
-    "axios": "^0.27.2",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
-    "bootstrap-icons": "^1.10.5",
-    "classnames": "^2.3.1",
+    "bootstrap-icons": "^1.11.3",
+    "classnames": "^2.5.1",
     "codemirror": "5.65.0",
     "color": "^4.2.3",
-    "copy-to-clipboard": "^3.3.2",
-    "dayjs": "^1.11.5",
+    "copy-to-clipboard": "^3.3.3",
+    "dayjs": "^1.11.10",
     "diff": "^5.1.0",
-    "i18next": "^21.9.0",
+    "i18next": "^23.8.2",
     "lodash": "^4.17.21",
-    "marked": "^4.0.19",
+    "marked": "^12.0.0",
     "md5": "^2.3.0",
-    "next-share": "^0.18.1",
-    "qrcode": "^1.5.1",
-    "qs": "^6.11.0",
+    "next-share": "^0.27.0",
+    "qrcode": "^1.5.3",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0",
-    "react-i18next": "^11.18.3",
-    "react-router-dom": "^6.8.1",
-    "semver": "^7.3.8",
-    "swr": "^1.3.0",
-    "zustand": "^4.1.1"
+    "react-helmet-async": "^2.0.4",
+    "react-i18next": "^14.0.5",
+    "react-router-dom": "^6.22.0",
+    "semver": "^7.6.0",
+    "swr": "^2.2.4",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.2.0",
-    "@fullhuman/postcss-purgecss": "^4.1.3",
-    "@testing-library/dom": "^8.17.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/color": "^3.0.3",
-    "@types/dompurify": "^2.4.0",
-    "@types/jest": "^27.5.2",
-    "@types/lodash": "^4.14.184",
-    "@types/marked": "^4.0.6",
-    "@types/node": "^16.11.47",
-    "@types/qs": "^6.9.7",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/color": "^3.0.6",
+    "@types/dompurify": "^3.0.5",
+    "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.14.202",
+    "@types/marked": "^5.0.2",
+    "@types/node": "^20.11.17",
+    "@types/qs": "^6.9.11",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "customize-cra": "^1.0.0",
-    "eslint": "^8.53.0",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-config-standard-with-typescript": "^39.1.1",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "humps": "^2.0.1",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.2.3",
-    "postcss": "^8.0.0",
-    "prettier": "^3.1.0",
-    "purgecss-webpack-plugin": "^4.1.3",
+    "husky": "^9.0.10",
+    "lint-staged": "^15.2.2",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "purgecss-webpack-plugin": "^5.0.0",
     "react-app-rewired": "^2.2.1",
     "react-scripts": "5.0.1",
-    "sass": "^1.54.4",
-    "typescript": "^4.9.5",
+    "sass": "^1.70.0",
+    "typescript": "^5.3.3",
     "yaml-loader": "^0.8.0"
   },
-  "packageManager": "pnpm@8.9.2",
   "engines": {
-    "node": ">=16.17",
-    "pnpm": ">=8"
+    "node": ">18.*"
   },
   "license": "MIT"
 }
