--- a/ui/package.json
+++ b/ui/package.json
@@ -19,11 +19,11 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "classnames": "^2.5.1",
-    "codemirror": "5.65.0",
+    "codemirror": "^5.65.16",
     "color": "^4.2.3",
     "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.10",
-    "diff": "^5.1.0",
+    "diff": "^5.2.0",
     "i18next": "^23.8.2",
     "lodash": "^4.17.21",
     "marked": "^12.0.0",
@@ -42,8 +42,8 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.2",
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.4.2",
@@ -58,8 +58,8 @@
     "@types/qs": "^6.9.11",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
     "customize-cra": "^1.0.0",
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -74,7 +74,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "humps": "^2.0.1",
-    "husky": "^9.0.10",
+    "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
