--- a/ui/package.json
+++ b/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "answer-static",
+  "name": "answer-frontend",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://answer.apache.org/",
