--- a/ui/package.json
+++ b/ui/package.json
@@ -8,7 +8,7 @@
     "build": "react-app-rewired build",
     "lint": "eslint . --cache --fix --ext .ts,.tsx",
     "prettier": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss,md}' --config ./.prettierrc.json",
-    "pre-install": "node ./scripts/preinstall.js && pnpm install",
+    "pre-install": "node ./scripts/preinstall.js && yarn",
     "pre-commit": "lint-staged",
     "build:packages": "pnpm -r --filter=./src/plugins/* run build",
     "clean": "rm -rf node_modules && rm -rf src/plugins/**/node_modules"
