fix: split main.js  #809 #784

--- a/ui/package.json
+++ b/ui/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "/",
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "lint": "eslint . --cache --fix --ext .ts,.tsx",
@@ -38,6 +39,7 @@
     "react-i18next": "^11.18.3",
     "react-router-dom": "^6.8.1",
     "semver": "^7.3.8",
+    "source-map-explorer": "^2.5.3",
     "swr": "^1.3.0",
     "zustand": "^4.1.1"
   },
