--- a/ui/package.json
+++ b/ui/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "homepage": "/",
   "scripts": {
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "lint": "eslint . --cache --fix --ext .ts,.tsx",
@@ -13,7 +12,8 @@
     "prepare": "pnpm build:packages",
     "pre-commit": "lint-staged",
     "build:packages": "pnpm -r --filter=./src/plugins/* run build",
-    "clean": "rm -rf node_modules && rm -rf src/plugins/**/node_modules"
+    "clean": "rm -rf node_modules && rm -rf src/plugins/**/node_modules",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -39,7 +39,6 @@
     "react-i18next": "^11.18.3",
     "react-router-dom": "^6.8.1",
     "semver": "^7.3.8",
-    "source-map-explorer": "^2.5.3",
     "swr": "^1.3.0",
     "zustand": "^4.1.1"
   },
@@ -84,6 +83,7 @@
     "react-app-rewired": "^2.2.1",
     "react-scripts": "5.0.1",
     "sass": "^1.54.4",
+    "source-map-explorer": "^2.5.3",
     "typescript": "^4.9.5",
     "yaml-loader": "^0.8.0"
   },
