--- a/ui/package.json
+++ b/ui/package.json
@@ -37,7 +37,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^11.18.3",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.22.3",
     "semver": "^7.3.8",
     "swr": "^1.3.0",
     "zustand": "^4.1.1"
@@ -87,7 +87,7 @@
     "typescript": "^4.9.5",
     "yaml-loader": "^0.8.0"
   },
-  "packageManager": "pnpm@8.9.2",
+  "packageManager": "pnpm@^9",
   "engines": {
     "node": ">=16.17",
     "pnpm": ">=8"
