--- a/ui/package.json
+++ b/ui/package.json
@@ -87,7 +87,7 @@
     "typescript": "^4.9.5",
     "yaml-loader": "^0.8.0"
   },
-  "packageManager": "pnpm@^9",
+  "packageManager": "pnpm@8.9.2",
   "engines": {
     "node": ">=16.17",
     "pnpm": ">=8"
