feat: ui env variables remove react_app prefix

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -35,6 +35,6 @@ service_config:
   upload_path: "/data/uploads"
 ui:
   public_url: '/'
-  react_app_api_url: '/'
-  react_app_base_url: '/test'
+  api_url: '/'
+  base_url: ''
 
