--- a/ui/package.json
+++ b/ui/package.json
@@ -23,12 +23,14 @@
     "axios": "^0.28.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.10.5",
+    "buffer": "^6.0.3",
     "classnames": "^2.3.1",
     "codemirror": "^6.0.1",
     "color": "^4.2.3",
     "copy-to-clipboard": "^3.3.2",
     "dayjs": "^1.11.5",
     "diff": "^5.1.0",
+    "gray-matter": "^4.0.3",
     "i18next": "^21.9.0",
     "lodash": "^4.17.21",
     "marked": "^4.0.19",
