--- a/ui/package.json
+++ b/ui/package.json
@@ -45,7 +45,8 @@
     "react-router-dom": "^6.22.3",
     "semver": "^7.3.8",
     "swr": "^1.3.0",
-    "zustand": "^4.1.1"
+    "zustand": "^4.1.1",
+    "demo": "workspace:*"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
