--- a/.asf.yaml
+++ b/.asf.yaml
@@ -30,7 +30,7 @@ github:
     - q-and-a
     - hacktoberfest
   features:
-    wiki: false
+    wiki: true
     issues: true
     projects: true
     discussions: false
