ci(github): rename github action name

--- a/.github/workflows/build-image-for-latest-release.yml
+++ b/.github/workflows/build-image-for-latest-release.yml
@@ -15,7 +15,7 @@
 # specific language governing permissions and limitations
 # under the License.
 
-name: Build Docker Image For Release
+name: Build Latest Docker Image For Release
 
 on:
   push:
