--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -15,6 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 
+version: 2
+
 env:
   - GO11MODULE=on
   - GO111MODULE=on
@@ -69,7 +71,7 @@ archives:
 checksum:
   name_template: 'checksums.txt'
 snapshot:
-  name_template: "{{ incpatch .Version }}"
+  version_template: "{{ incpatch .Version }}"
 changelog:
   sort: asc
   filters:
