--- a/ui/package.json
+++ b/ui/package.json
@@ -87,15 +87,15 @@
     "purgecss-webpack-plugin": "^4.1.3",
     "react-app-rewired": "^2.2.1",
     "react-scripts": "5.0.1",
-    "sass": "^1.54.4",
+    "sass": "1.54.4",
     "source-map-explorer": "^2.5.3",
     "typescript": "^4.9.5",
     "yaml-loader": "^0.8.0"
   },
-  "packageManager": "pnpm@8.9.2",
+  "packageManager": "pnpm@9.7.0",
   "engines": {
-    "node": ">=16.17",
-    "pnpm": ">=8"
+    "node": ">=18.16",
+    "pnpm": ">=9"
   },
   "license": "MIT"
 }
